kubernetes/overlays/infrastructure/infra/applications/authelia/network-policies/allow-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: authelia
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: authelia
