kubernetes/overlays/infrastructure/infra/applications/authelia/network-policies/allow-ldaps.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ldaps
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
      - ipBlock:
          cidr: REDACTED_IP/24
    ports:
    - protocol: TCP
      port: 636
