kubernetes/overlays/infrastructure/infra/applications/authelia/network-policies/allow-vmagent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vmagent-scrape
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 9959
    - protocol: TCP
      port: 9187
